src/objects/vlocity_ins__EntityFilter__c.object
<CustomObject>
    <description>A Vlocity Entity Filter is a reusable &quot;where clause&quot; used to identify a subset of entity records for some purpose.  For example, an entity filter may be used to define the products for which a Vlocity Rule applies.</description>
    <fields>
        <fullName>vlocity_ins__AttributeLookupFieldName__c</fullName>
        <label>Attribute Lookup Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributesMetadataFieldName__c</fullName>
        <label>Attributes Metadata Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributesValuesFieldName__c</fullName>
        <label>Attributes Values Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EvaluationCriteria__c</fullName>
        <label>Evaluation Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Expression__c</fullName>
        <label>Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FailureMessage__c</fullName>
        <label>Failure Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FilterOnObjectName__c</fullName>
        <description>This holds the object&apos;s name that the filter conditions will validate against.</description>
        <inlineHelpText>This holds the object&apos;s name that the filter conditions will validate against.</inlineHelpText>
        <label>Filter On Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FormulaForConditions__c</fullName>
        <label>Formula For Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Operation__c</fullName>
        <label>Expression Evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>And</fullName>
                </value>
                <value>
                    <fullName>Or</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ValidFromDate__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ValidUntilDate__c</fullName>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <label>Vlocity Entity Filter</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entity Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Entity Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__EvaluationCriteriaNotNull</fullName>
        <active>true</active>
        <description>Evaluation Criteria shouldn&apos;t be null if the filter is of type Evaluation</description>
        <errorConditionFormula>ISPICKVAL(vlocity_ins__Type__c, &apos;Evaluation&apos;) &amp;&amp;   (ISPICKVAL(vlocity_ins__EvaluationCriteria__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>vlocity_ins__EvaluationCriteria__c</errorDisplayField>
        <errorMessage>Please select a valid type for this Entity Filter.</errorMessage>
    </validationRules>
</CustomObject>